# tractor-game

./: .gitignore  CLAUDE.md  PLAYER_PROTOCOL.md  README.md  deno.json  index.html  package-lock.json  package.json  playthrough_cdp.py  pyproject.toml  run.sh  start.sh  training.md  tsconfig.json
frontend/: config.ts  debug-ai.css  debug-ai.html  debug-ai.ts  index.html  main.ts  style.css  tsconfig.json
frontend/ai-debug/: index.html  json.ts  main.ts  record-renderer.ts  style.css
frontend/browser/: json.ts
frontend/core/: card.ts  protocol.ts  state.ts  types.ts
frontend/debug-ai/: dom.ts  json.ts  stream.ts  types.ts
frontend/engine/: action-handler.ts  bid-logic.ts  game-loop.ts  input-validator.ts  pending-bid-controller.ts  scoring-logic.ts  state-playback-queue.ts  trick-preview-controller.ts  types.ts  ui-state-computer.ts
frontend/game/: index.html  lobby-selection.ts  routing.ts  style.css
frontend/net/: rest-client.ts  ws-client.ts
frontend/tests/: card.test.ts  (+25 more)
scripts/: cache_bust_static.ts
server/: actions.py  actions_tests.py  api_types.py  app_state.py  bot_factory.py  game.py  game_hints.py  game_protocol.py  game_push.py  game_registry.py  game_registry_tests.py  game_room.py  game_room_tests.py  game_snapshot.py  game_tests.py  lifespan.py  messages.py  module_boundaries_tests.py  player.py  player_factory.py  player_tests.py  protocol_snapshot_builder.py  requirements.txt  resilience.py  result.py  schemas.py  server.py  server_tests.py  snapshot.py
src/: main.ts  style.css
tests/: conftest.py  sm_integration.py  test_correct_rules.py  test_e2e.py  test_full_flow.py  test_full_game_ws.py  test_issues.py  test_playthrough_playwright.py  test_qq_rules.py  test_server_module_boundaries.py  test_ui_flow.py  verify-core-fixes.spec.ts  verify_core_fixes.py
working/: task-issues.md
(+734 files in other folders)
