[project]
name = "tractor-game"
version = "0.1.0"
description = "tractor card game"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
    "pyright>=1.1.370",
]

[tool.pytest.ini_options]
testpaths = [
    "server",
    "tests",
]
python_files = ["*_tests.py", "test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.ruff]
line-length = 72
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "strict"
include = ["server", "tests"]
