[project]
name = "tractor-game"
version = "0.1.0"
description = "tractor card game"
requires-python = ">=3.14"
dependencies = [
    "fastapi==0.136.0",
    "starlette==1.0.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-timeout>=2.4.0",
    "ruff>=0.5.0",
    "pyright>=1.1.370",
]

[tool.pytest.ini_options]
testpaths = [
    "server",
    "tests",
]
pythonpath = ["."]
python_files = ["*_tests.py", "test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
markers = [
    "playthrough: visible browser full-game Playwright playthrough",
]

[tool.ruff]
line-length = 72
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "strict"
include = ["server", "tests"]
venvPath = "."
venv = ".venv"
